--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>A Virtuous Woman</title>
     <meta name="description" content="Who can find a benevolent woman? Her price is more precious the words." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Virtuous Woman" content="Benevolent Woman">
+    <meta name="Virtuous Woman,benevolent woman,benevolentwoman,benevolent" content="Benevolent Woman,benevolentwoman.com, benevolent,woman,virtuous woman, virtuouswoman">
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/animate.min.css" />
     <link rel="stylesheet" href="./css/ionicons.min.css" />
