--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 <a href="res.cloudinary.com/benevolent-woman/image/upload/c_scale,e_brightness:80,w_280/v1588197562/pexels-photo-2951140_qlf4d1.jpg" id="Black Woman" data-toggle="collapse" </a> &nbsp; <a href="#" class="btn btn-primary btn-xl page-scroll">Discover More</a>
             </div>
         </div>
-        <video autoplay="" loop="" class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="https://res.cloudinary.com/dyqlkc3ri/image/upload/c_scale,w_2184/v1588265971/purple-abstract-art-3109807_zze1kb.jpg" id="video-background">
-            <source src="https://s3-us-west-2.amazonaws.com/coverr/mp4/Traffic-blurred2.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.
+        <video autoplay="https://res.cloudinary.com/dyqlkc3ri/video/upload/v1588349381/colorful-paint-color-spreading-FZLP8VM_dpazy1.mp4" loop="true" class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="https://res.cloudinary.com/dyqlkc3ri/image/upload/c_scale,w_2184/v1588265971/purple-abstract-art-3109807_zze1kb.jpg" id="video-background">
+            <source src="https://res.cloudinary.com/dyqlkc3ri/video/upload/v1588349381/colorful-paint-color-spreading-FZLP8VM_dpazy1.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.
         </video>
     </header>
     <section class="bg-primary" id="one">
