--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>A Virtuous Woman</title>
     <meta name="description" content="Who can find a benevolent woman? Her price is more precious the words." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Virtuous Woman,benevolent woman,benevolentwoman,benevolent" content="Benevolent Woman,benevolentwoman.com, benevolent,woman,virtuous woman, virtuouswoman">
+    <meta name="Virtuous Woman" content="Benevolent Woman">
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/animate.min.css" />
     <link rel="stylesheet" href="./css/ionicons.min.css" />
@@ -56,7 +56,7 @@
                 <h4>My Blackness Won't Let Me....</h4>
                 <hr>
                 <a href="res.cloudinary.com/benevolent-woman/image/upload/c_scale,e_brightness:80,w_280/v1588197562/pexels-photo-2951140_qlf4d1.jpg" id="Black Woman" data-toggle="collapse" </a> &nbsp; <a href="#" class="btn btn-primary btn-xl page-scroll">Discover More</a>
-            </div> 
+            </div>
         </div>
         <video autoplay="https://res.cloudinary.com/dyqlkc3ri/video/upload/v1588349381/colorful-paint-color-spreading-FZLP8VM_dpazy1.mp4" loop="true" class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="https://giphy.com/gifs/imminentflair-immensecharisma-immensecybercoder-Zd5RKr9swPX0gFlf9K/fullscreen" id="video-background">
             <source src="https://res.cloudinary.com/dyqlkc3ri/video/upload/v1588349381/colorful-paint-color-spreading-FZLP8VM_dpazy1.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.
@@ -72,7 +72,7 @@
                         We're Beautiful in all colors. Brown. Black. Women.
                     </p>
                     <a href="#three" class="btn btn-default btn-xl page-scroll">News</a>
-                                       
+
                 </div>
             </div>
         </div>
