--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a class="page-scroll" href="#">Features</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#">Contact</a>
+                        <a class="page-scroll" href="contact-form row">Contact</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -206,7 +206,7 @@
                 <div class="col-xs-6 col-sm-3 column">
                     <h4>About</h4>
                     <ul class="list-unstyled">
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="contact-form row">Contact Us</a></li>
                         <li><a href="#">Delivery Information</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Terms &amp; Conditions</a></li>
