--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="res.cloudinary.com/benevolent-woman/image/upload/c_scale,e_brightness:80,w_280/v1588197562/pexels-photo-2951140_qlf4d1.jpg" id="Black Woman" data-toggle="collapse" </a> &nbsp; <a href="#" class="btn btn-primary btn-xl page-scroll">Discover More</a>
             </div>
         </div>
-        <video autoplay playsinline="https://res.cloudinary.com/dyqlkc3ri/video/upload/v1588349381/colorful-paint-color-spreading-FZLP8VM_dpazy1.mp4" loop="true" class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="https://media.giphy.com/media/Zd5RKr9swPX0gFlf9K/giphy.gif" id="video-background">
+        <video autoplay playsinline="https://res.cloudinary.com/dyqlkc3ri/video/upload/v1588349381/colorful-paint-color-spreading-FZLP8VM_dpazy1.mp4" loop="true" class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="https://giphy.com/gifs/Zd5RKr9swPX0gFlf9K/html5" id="video-background">
             <source src="https://res.cloudinary.com/dyqlkc3ri/video/upload/v1588349381/colorful-paint-color-spreading-FZLP8VM_dpazy1.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.
         </video>
     </header>
