--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a class="page-scroll" href="#">Features</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="contact-form row">Contact</a>
+                        <a class="page-scroll" href="contact-form">Contact</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
