--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="res.cloudinary.com/benevolent-woman/image/upload/c_scale,e_brightness:80,w_280/v1588197562/pexels-photo-2951140_qlf4d1.jpg" id="Black Woman" data-toggle="collapse" </a> &nbsp; <a href="#" class="btn btn-primary btn-xl page-scroll">Discover More</a>
             </div>
         </div>
-        <video autoplay playsinline="https://res.cloudinary.com/dyqlkc3ri/video/upload/v1588349381/colorful-paint-color-spreading-FZLP8VM_dpazy1.mp4" loop="true" class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="https://res.cloudinary.com/dyqlkc3ri/image/upload/c_scale,e_sharpen:93,w_522/v1588387631/20200501_194500_izmhl5.gif" id="video-background">
+        <video autoplay playsinline="https://res.cloudinary.com/dyqlkc3ri/video/upload/v1588349381/colorful-paint-color-spreading-FZLP8VM_dpazy1.mp4" loop="true" class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="https://res.cloudinary.com/dyqlkc3ri/image/upload/e_sharpen:116/v1588361796/ezgif.com-gif-maker_2_cty4qv.gif" id="video-background">
             <source src="https://res.cloudinary.com/dyqlkc3ri/video/upload/v1588349381/colorful-paint-color-spreading-FZLP8VM_dpazy1.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.
         </video>
     </header>
