--- a/index.html
+++ b/index.html
@@ -112,11 +112,33 @@
             </div>
         </div>
     </section>
-    <section id="three" class="no-padding">
+   <section id="three" class="no-padding">
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                 
+                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="https://res.cloudinary.com/dyqlkc3ri/image/upload/v1588207257/woman-wearing-black-tube-dress-1559086_yz7imo.jpg">
+                        <img src="https://res.cloudinary.com/dyqlkc3ri/image/upload/v1588207257/woman-wearing-black-tube-dress-1559086_yz7imo.jpg" class="img-responsive" alt="Image 1">
+                        <div class="gallery-box-caption">
+                            <div class="gallery-box-content">
+                                <div>
+                                    <i class="icon-lg ion-ios-search"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="https://res.cloudinary.com/dyqlkc3ri/image/upload/v1588207247/photo-of-woman-wearing-blue-blazer-2951141_wmdava.jpg">
+                        <img src="https://res.cloudinary.com/dyqlkc3ri/image/upload/v1588207247/photo-of-woman-wearing-blue-blazer-2951141_wmdava.jpg" class="img-responsive" alt="Image 2">
+                        <div class="gallery-box-caption">
+                            <div class="gallery-box-content">
+                                <div>
+                                    <i class="icon-lg ion-ios-search"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
 				<div class="clearfix hidden-lg"> </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="https://res.cloudinary.com/dyqlkc3ri/image/upload/v1588207239/grayscale-photo-of-posing-woman-in-off-shoulder-dress-2873701_odgf4c.jpg">
@@ -130,7 +152,6 @@
                         </div>
                     </a>
                 </div>
-
 
                             </div>
                         </div>
