Deleting Brown. Black. Women. from line 72

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <h2 class="margin-top-0 text-primary">A Benvolent Woman</h2>
                     <br>
                     <p class="text-faded">
-                        We're Beautiful in all colors. Brown. Black. Women.
+                        We're Beautiful in all colors.
                     </p>
                     <a href="#three" class="btn btn-default btn-xl page-scroll">News</a>
 
