--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>A Virtuous Woman</title>
-    <meta name="description" content="Who can find a benevolent woman? Her price is more precious the words." />
+    <meta name="description" content="Who can find a benevolent woman? Her price is far more precious than rubies." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Virtuous Woman" content="Benevolent Woman">
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
