--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
         <div class="header-content">
             <div class="inner">
                 <h1 class="cursive" font="10">And the LORD answered me, and said, Write the vision, and make it plain upon tables, that he may run that readeth it. For the vision is yet for an appointed time, but at the end it shall speak, and not lie; though it tarry, wait for it; because it will surely come, it will not tarry (Habakkuk 2: 2-3).</h1>
-		    <h4><strong><em>My Blackness Won't Let Me....</em></strong>
-		    {font-size: 27px;} </h4>		       
+		    <h4><strong><em>My Blackness Won't Let Me....</em></strong></h4>		       
 		    <hr>
                 <a href="res.cloudinary.com/benevolent-woman/image/upload/c_scale,e_brightness:80,w_280/v1588197562/pexels-photo-2951140_qlf4d1.jpg" id="Black Woman" data-toggle="collapse" </a> &nbsp; <a href="#" class="btn btn-primary btn-xl page-scroll">Discover More</a>
             </div>
