--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                     <li>
                         <a class="page-scroll" href="#">Features</a>
                     </li>
+		    <li>
+			    <a class="page-scroll" href="#">Blog</a>
+		   </li>
                     <li>
                         <a class="page-scroll" href="#four">Contact</a>
                     </li>
