Added store link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a class="page-scroll" href="#three">Gallery</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#">Features</a>
+                        <a class="page-scroll" href="https://teespring.com/stores/benevolent-woman?page=1">Shop</a>
                     </li>
 		    <li>
 			    <a class="page-scroll" href="#">Blog</a>
