--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                                 <a class="underline" href="#!">VK</a>
                             </li>
                             <li>
-                                <a class="underline" href="#!">Github</a>
+                                <a class="underline" href="https://teespring.com/stores/benevolent-woman?page=1">Storeb</a>
                             </li>
                         </ul>
                     </div>
