--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                                 <a class="underline" href="#!">Twitter</a>
                             </li>
                             <li>
-                                <a class="underline" href="#!">VK</a>
+                                <a class="underline" href="#!">Instagram</a>
                             </li>
                             <li>
                                 <a class="underline" href="https://teespring.com/stores/benevolent-woman?page=1">Storeb</a>
