--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- Trying to force IE to perform at its best-->
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <!-- Meta description, aim for about 150 characters-->
-        <meta name="description" content="Who can find a benevolent woman? Her price is far more precious than rubies."">
+        <meta name="description" content="A Benevolent Woman">
         <!-- Stylesheets-->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans:200,300,400,700">
         <link rel="stylesheet" href="./libs/materialize/css/materialize.min.css">
