--- a/index.html
+++ b/index.html
@@ -506,17 +506,18 @@
                     <div class="col s12 l4 margin-on-medium-and-down">
                         <ul>
                             <li>
-                                <a class="underline" href="#!">Facebook</a>
+                                <a class="underline" href="https://www.facebook.com/BenevolentWoman">Facebook</a>
                             </li>
                             <li>
-                                <a class="underline" href="#!">Twitter</a>
+                                <a class="underline" href="https://twitter.com/search?q=benevolentwoman1&src=typed_query">Twitter</a>
                             </li>
                             <li>
-                                <a class="underline" href="#!">Instagram</a>
+                                <a class="underline" href="https://www.instagram.com/womanbenevolent/?hl=en">Instagram</a>
                             </li>
                             <li>
                                 <a class="underline" href="https://teespring.com/stores/benevolent-woman?page=1">Store</a>
                             </li>
+                            <li> <a class="underline" href="#">Podcast</a>
                         </ul>
                     </div>
                     <div class="col s12 l4 margin-on-medium-and-down">
