--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                                 <a class="underline" href="https://www.facebook.com/BenevolentWoman">Facebook</a>
                             </li>
                             <li>
-                                <a class="underline" href="https://twitter.com/search?q=benevolentwoman1&src=typed_query">Twitter</a>
+                                <a class="underline" href="https://twitter.com/BenevolentWoma1">Twitter</a>
                             </li>
                             <li>
                                 <a class="underline" href="https://www.instagram.com/womanbenevolent/?hl=en">Instagram</a>
