--- a/index.html
+++ b/index.html
@@ -517,7 +517,11 @@
                             <li>
                                 <a class="underline" href="https://teespring.com/stores/benevolent-woman?page=1">Store</a>
                             </li>
-                            <li> <a class="underline" href="#">Podcast</a>
+                            <li> <a class="underline" href="https://mymentor.life/valenciasuggs">Mentoring</a>
+                        
+                            <li>
+                                <a class="underline" href="#">Podcast</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="col s12 l4 margin-on-medium-and-down">
