--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@
                             <div class="row">
                                 <div class="col s12 m10 offset-m1 l6 offset-l3 flow-text">
                                     <p>Through our relationship with God we can realize our potential. We find him through discovering the relationship between our life and interactions with others. We also can receive positive energy through discovering nature and its parallels to life.</p>
-                                    <p>&ldquo;If you truly love nature,&rdquo;you will find beauty everywhere.Nature always wears the colors of the spirit.Look deep into nature, and then you will understand everything better. Just living is not enough.  <li> <a class="underline" href="https://mymentor.life/valenciasuggs">Discover More</a>
+                                    <p>&ldquo;If you truly love nature,&rdquo;you will find beauty everywhere.Nature always wears the colors of the spirit.Look deep into nature, and then you will understand everything better. Just living is not enough.  <ul> <a class="underline" href="https://mymentor.life/valenciasuggs">Discover More</a>
                         
-                            <li></p>
+                            </ul></p>
                                 </div>
                             </div>
                             <div class="row">
