Added travel link

--- a/index.html
+++ b/index.html
@@ -520,8 +520,10 @@
                                 <a class="underline" href="https://teespring.com/stores/benevolent-woman?page=1">Store</a>
                             </li>
                             <li> <a class="underline" href="https://mymentor.life/valenciasuggs">Mentoring</a>
-                        
                             <li>
+                                <li>
+                                    <a class="underline" href="https://valencia.suggs.inteletravel.com">Travel</a>
+                            </li>
                                 <a class="underline" href="#">Podcast</a>
                             </li>
                         </ul>
