Updated correct link

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                             <li> <a class="underline" href="https://mymentor.life/valenciasuggs">Mentoring</a>
                             <li>
                                 <li>
-                                    <a class="underline" href="https://valencia.suggs.inteletravel.com">Travel</a>
+                                    <a class="underline" href="https://valenciasuggs.inteletravel.com/booktravel.cfm">Travel</a>
                             </li>
                                 <a class="underline" href="#">Podcast</a>
                             </li>
